# Tools-in-DataScience

./: README.md  main.py  pyproject.toml
test/: q1.html
week0/: q-calculate-variance.json  q1.html  q11.py  q3.py  q4.py  q6.html  q7.py  q8.py
week0/q10/: q-fastapi.csv  ques.py
week2/fastapi-observability-demo/: README.md
week2/fastapi-observability-demo/app/: main.py
week2/google-oauth-fastapi/: .env  main.py  pyproject.toml
week2/tunnel-demo/: README.md  main.py  pyproject.toml
