[project]
name = "google-oauth-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.7.2",
    "fastapi>=0.139.0",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]
